[Bugfix] Repositioning button text of link modal on IE11 (#3174)
* Repositioning button text of link modal

* Linting

--- a/src/components/LinkModal/LinkModal.scss
+++ b/src/components/LinkModal/LinkModal.scss
@@ -171,6 +171,10 @@
       height: 30px;
       cursor: pointer;
 
+      @include ie11 {
+        padding-left: 11px;
+      }
+
       &:hover {
         background: var(--primary-button-hover);
       }
